--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     #export-drawing-button { height: 2rem; padding: 0 1rem; margin-right: 1rem; font-size: 0.875rem; border-radius: 0.375rem; }
 
     /* 右パネルのスクロール対応 */
-    #right-panel-wrapper { height: 100%; overflow-y: auto; }
+    #right-panel-wrapper { height: 100%; overflow-y: auto; touch-action: manipulation; }
     .measurement-label { position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 2px 6px; border-radius: 4px; font-size: 12px; pointer-events: none; transform: translateX(-50%) translateY(-50%); white-space: nowrap; transition: top 0.1s; }
 
     #loading-overlay { z-index: 100; }
     .loader { border: 8px solid #f3f3f3; border-radius: 50%; border-top: 8px solid #4f46e5; width: 60px; height: 60px; animation: spin 1s linear infinite; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     
-    /* ★追加: スライダーの向きを反転させるスタイル */
+    /* スライダーの向きを反転させるスタイル */
     .rtl {
       direction: rtl;
     }
